[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/VanHunter/cars/bluebro.png" type="Texture" id=1]
[ext_resource path="res://Assets/Cars/img_bad2.png" type="Texture" id=2]
[ext_resource path="res://Scripts/bodyCarEnemy.gd" type="Script" id=3]
[ext_resource path="res://Assets/img_health.png" type="Texture" id=4]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 22 )

[node name="bodyCarEnemy" type="KinematicBody2D"]
show_behind_parent = true
scale = Vector2( 4, 4 )
collision_layer = 8
collision_mask = 10
script = ExtResource( 3 )

[node name="partDirt" type="CPUParticles2D" parent="."]
position = Vector2( 0, 15 )
amount = 24
lifetime_randomness = 0.5
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 10, 1 )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 125.0
scale_amount = 16.0
scale_amount_random = 0.5
color = Color( 0.372549, 0.341176, 0.341176, 1 )

[node name="sprCar" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="sprBro" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="shapeCar" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="timerAttack" type="Timer" parent="." groups=[
"enemy",
]]
process_mode = 0
autostart = true

[node name="timerState" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
autostart = true

[node name="prgHealth" type="TextureProgress" parent="."]
margin_left = -13.1575
margin_top = -24.2676
margin_right = 12.8425
margin_bottom = -20.2676
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
tint_under = Color( 0.266667, 0.239216, 0.239216, 1 )
tint_progress = Color( 0.741176, 0.972549, 0.533333, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="timerAttack" to="." method="_on_timerAttack_timeout"]
[connection signal="timeout" from="timerState" to="." method="_on_timerState_timeout"]
